
ClearCase
----------------------
* Change validation so that branch is not a required attribute.

CompositeBuilder
----------------------
* Changed to stop as soon as encounters first error, thereby reducing the log size for failed builds. Patch by Mark Kefauver.

CruiseControlConfig
----------------------
* <include.projects> now handles nested <include.projects>

EmbeddedJettyServer
----------------------
* Added jmxport and rmiport parameters to the embedded jetty server that are passed to the dashboard.

JMX
----------------------
* Added the ability to retrieve commit messages for a project's "current" modification set.
* Added the ability to retrieve build output (e.g. from Ant) from the most recent, or active, build.
* Added the ability to retrieve statuses of all projects.  

Main.java
----------------------
* Improved wording for dashboard webapp path and reporting web app path.

PlasticSCM & PlasticSCMBootstrapper
----------------------
* New sourcecontrol and bootstrapper for Plastic SCM. Contributed by Ruben de Alba.

contrib
======================

distributed
----------------------
* Remove deprecated "module" attribute.
* Add Agent Impl Version/Compile Date to BuildAgentServiceImpl.asString().

mainAsWar
----------------------
* Stop the non-daemon threads (BuildQueue and JMX Adapters) when the servlet is destroyed to allow a clean exit by the servlet container.


CruiseControl Release Notes - 2.6.2

documentation
======================

configxml.html
----------------------
* Added "veto" sourcecontrol to modificationset overview documentation (main/docs/configxml.html#modificationset). Patch by Allan Wick.
* Added "composite" builder to schedule overview documentation (main/docs/configxml.html#schedule). Pointed out by Kevin Quigley.
* Clarified documentation and fixed a typo for MKSBootstrapper (CC-584). Patch by Markus M. May.

build loop
======================

ConcurrentVersionsSystem
----------------------